--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -242,22 +242,21 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped on the basis of light and height and show different degrees of foliar plasticity in accordance with the intensity and availability of light which also optimize water uptake, heat and C uptake by leaves in forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves such as phytochromes among others mediate response to PAR, and ratio of red to far red radiation [R:FR] falling on the surface. This enables acclimation or avoidance response through development of necessary traits [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf traits  compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+Leaf traits are shaped on the basis of light and height and show different degrees of foliar plasticity in accordance with the intensity and availability of light which also optimize water uptake, heat and C uptake by leaves across forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves such as phytochromes among others mediate response to PAR, and ratio of red to far red radiation [R:FR] falling on the surface. This enables acclimation or avoidance response through development of necessary traits [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf traits  compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
 
-Increasing number of studies point towards the importance for incorporating sun and shade in modelling leaf economic spectrum (LES) within-canopy gradient[@chenLeafEconomicsSpectrum2020a] because LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in simplified cateogorization of 'sun' and 'shade' leaves due to variation based on light within-canopy, across functional groups, in canopy gaps, height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. Classification for sun and shade tolerance rankings have been highted by multiple studies [Baker 1949; @niinemetsControversyTraitsConferring2006; Feng et al. 2018] such as from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". "Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered".[refs, -Martijn Slot]
+Increasing number of studies point towards the importance for incorporating sun and shade in modelling leaf economic spectrum (LES) within-canopy gradient[@chenLeafEconomicsSpectrum2020a] because LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in simplified cateogorization of 'sun' and 'shade' leaves due to variation based on light within-canopy, across functional groups, in canopy gaps, height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. Classification for sun and shade tolerance rankings have been highlighted by multiple studies [Baker 1949; @niinemetsControversyTraitsConferring2006; Feng et al. 2018] such as from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". "Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered".[refs, -Martijn Slot]
 
 
 **Inter-species vertical gradient leaf trait variation**
 
 Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory. As a result, sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, hairier, with thicker cuticle and more lobated than shade leaves
-[Mathur et al. 2018]. However, the combination of stressors taller trees' foliage experience are different from the combination of stressors understory shorter trees's foliage experience. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, wind speed, etc. whereas for understory--shade or limitation of light, niche competition, herbivory etc. These pressures also contribute to the development of necessary traits that is primarily mediated by light response.Leaves act as windows to plant performance enhacing plant adaptation to changing environment, thus traits acclimated to prior stressors have been suggested to enable whole plant to respond differently to forcoming stress [@niinemetsResponsesForestTrees2010a]
+[Rozendaal et al. 2006, Mathur et al. 2018, more REFS]. 
 
-"Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn].  [@niinemetsResponsesForestTrees2010a]. 
-Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis [Mathur et al. 2018]. Canopy foliar traits will be different from shade leaves of canopy trees as well. E.g.They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
+However, the combination of stressors taller trees' foliage experience are different from the combination of stressors understory shorter trees's foliage experience. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, wind speed, etc. whereas for understory--shade or limitation of light, niche competition, herbivory etc. These pressures also contribute to the development of necessary traits that is primarily mediated by light response. Overstory sun leaves are subjected to overheating pressures, thus through developed traits of increased stomatal density, transpiration and water supply along with increased convective heatloss by reducing boundary layer resistance, sun leaves are able to maintain optimum temperature. Additionally, overstory sun leaves tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaing larger width leaves with comparitevely fewer stomtal density as a result of available water, lesser $VPD$, and wind speed. "Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn].Those differences in traits are likely to affect their thermal properties as well.Leaves act as windows to plant performance enhacing plant adaptation to changing environment, thus traits acclimated to prior stressors have been suggested to enable whole plant to respond differently to forcoming stress [Rozendaal et al. 2006; @niinemetsResponsesForestTrees2010a]
 
-However, even with distinct features of sun and shade traits, trait adaptation to light is done in such a way where light use efficiency for photosynthesis is maximized at both high or low light. In light limited conditions, shade leaves increase light capture efficiency through increasing their specific leaf area [SLA] and by investing in chlorophyll at a mass basis--"leads to a similar chlorphyll content on an area basis compared with sun leaves. This makes shade leaves realize a similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, Rozendaal et al. 2006]
+However, even with distinct features of sun and shade traits, trait adaptation to light is done in such a way where light use efficiency for photosynthesis is maximized at both high or low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency through increasing their specific leaf area [SLA] and by investing in chlorophyll at a mass basis--"leads to a similar chlorphyll content on an area basis compared with sun leaves. This makes shade leaves realize a similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, Rozendaal et al. 2006]
 
-With increasing height and age, competion for light decreases as availibity  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$) in shade tolerators than in intolerators, greater photosynthetic capacity in low light and greater carbon gain capacities[Niinemets, 2006].Rozendaal et al. 2006 has more info about this.   
+With increasing height and age, competion for light decreases as availibity  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$) in shade tolerators than in intolerators, greater photosynthetic capacity in low light and greater carbon gain capacities[Niinemets, 2006].Rozendaal et al. 2006, Koike et al. 2001 has more info about this.   
 
 **Intra-canopy on the same species leaf trait variation**
 
